# garden

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Cask  DESIGN_PRINCIPLES.md  LICENSE  README.md  REPL_FEATURES.md  about.html  about.tmpl.html  blog.html  build.rs  build_site.gdn  callgrind.out.1  callgrind.out.2  clippy.toml  fizzbuzz.gdn  foo.gdn  fun:__fs.gdn::copy_file.html  fun:__fs.gdn::create_dir.html  fun:__fs.gdn::list_directory.html  fun:__fs.gdn::read_file.html  fun:__fs.gdn::read_file_bytes.html  fun:__fs.gdn::remove_dir.html  fun:__fs.gdn::remove_file.html  fun:__fs.gdn::set_working_directory.html  fun:__fs.gdn::working_directory.html  fun:__fs.gdn::write_bytes.html  fun:__fs.gdn::write_file.html  fun:__garden.gdn::check_snippet.html  fun:__garden.gdn::doc_comment.html  fun:__garden.gdn::doc_comment_for_method.html  fun:__garden.gdn::doc_comment_for_type.html  fun:__garden.gdn::keywords.html  fun:__garden.gdn::lex.html  fun:__garden.gdn::methods_for_type.html  fun:__garden.gdn::namespace_functions.html  (+195 more)
.github/workflows/: coverage.yml  deploy_site.yml  docker-build.yml  docker.yml  release.yml  test.yml  test_snippets.yml
benchmarks/: fun_call.gdn  loop.gdn
blog/: devlog_1.md  sandbox.html  syntax.html  syntax.md  why-garden.md
design/: README.md  work_stack_migration.md  work_stack_prototype.rs
editors/: Cask  garden-flycheck.el  garden-mode.el
garden/: Cargo.toml
garden-lang-parser/: Cargo.toml
garden-lang-parser/src/: ast.rs  diagnostics.rs  lex.rs  lib.rs  position.rs  visitor.rs
garden-lang-web/: Cargo.toml
garden-lang-web/src/: lib.rs
garden/src/: eval.rs  main.rs  parse.rs  prompt.rs
garden_lang_parser/: Cargo.toml
garden_lang_parser/src/: ast.rs  diagnostics.rs  lex.rs  lib.rs  position.rs  values.rs
garden_lang_web/: Cargo.toml
garden_lang_web/src/: lib.rs
pkg/: garden_lang_web.d.ts  garden_lang_web.js  garden_lang_web_bg.wasm  garden_lang_web_bg.wasm.d.ts  package.json
playground/: Caddyfile  Dockerfile  docker-compose.yml  good.json  index.js  package-lock.json  package.json  serve.sh
proptest-regressions/: parser.txt
sample_programs/: ambiguities.md  bad.gdn  bad_syntax.gdn  bad_type.gdn  bad_type_indirect.gdn  build_site.gdn  failing_test.gdn  fizzbuzz.gdn  git_fuzzy_branch.gdn  hangman.gdn  hello_world.gdn  json.gdn  json_parser_notes.md  log.gdn  markdown.gdn
scripts/: release.sh
src/: __builtins.gdn  __fs.gdn  __garden.gdn  __list.gdn  __option.gdn  __prelude.gdn  __random.gdn  __reflect.gdn  __shell.gdn  __time.gdn  add_type_annotation.rs  ast.rs  built_in_files.rs  builtins.gdn  caret_finder.rs  check.rs  check_markdown.rs  check_snippets.rs  checks.rs  cli_session.rs  colors.rs  commands.rs  completions.rs  destructure.rs  diagnostics.rs  env.rs  errors.ts  eval.rs  evaluator.ts  extract_function.rs  extract_variable.rs  format.rs  garden_type.rs  go_to_def.rs  highlight.rs  hover.rs  index.html  interactive_session.rs  json_session.rs  lex.rs  (+30 more)
src/check_test_files/: ambiguity_fun_call_or_tuple.gdn  ambiguity_struct_literal_or_block.gdn  assign_returns_unit.gdn  assign_wrong_type.gdn  bad_fun_arity.gdn  bad_syntax.gdn  bound_but_unused.gdn  break_without_loop.gdn  builtin_impl.gdn  cascading_errors.gdn  dbg.gdn  duplicate_function.gdn  duplicate_method.gdn  duplicate_type.gdn  enum_payload_generic.gdn  enum_struct_field.gdn  equality_on_different_type.gdn  equality_on_error_type.gdn  error_is_bottom_type.gdn  free_variable.gdn  free_variable_block.gdn  free_variable_bound_in_match.gdn  free_variable_bound_param.gdn  free_variable_in_list.gdn  free_variable_in_test.gdn  free_variables_used_in_builtin.gdn  fun_arity.gdn  function_parameter.gdn  generic_taking_arguments.gdn  lambda_containing_if.gdn  let_returns_unit.gdn  let_shadow_lambda.gdn  list_mixed.gdn  malformed_function_parameter.gdn  map.gdn  method_after_or_error.gdn  method_arity.gdn  method_on_top.gdn  method_use_self.gdn  missing_colon_method_receiver.gdn  (+62 more)
src/checks/: assign_ids.rs  builtin_annotations.rs  duplicate_exprs.rs  duplicates.rs  free_variables.rs  hints.rs  infinite_while.rs  list_len_compare.rs  loops.rs  or_value_pattern.rs  recursion.rs  recursion_variable.rs  repeated_bool.rs  same_literal_returns.rs  self_assign_compare.rs  simplify_bool.rs  single_iteration_loops.rs  struct_fields.rs  type_checker.rs  unconditional_break.rs  unit_let.rs  unnecessary_let.rs  unnecessary_return.rs  unreachable.rs  unused_assignments.rs  unused_defs.rs  unused_literals.rs  unused_result.rs  unused_vars.rs  visitor.rs
src/complete_test_files/: list.gdn  method.gdn  method_with_prefix.gdn  struct.gdn
src/json_test_files/: add.json  (+7 more)
static/: blocks.min.css  playground.js  playground.js.map  style.css
website/: about.html  about.tmpl.html  bad.json  blog.html  blog.md  build_site.gdn  foo.gdn  fun:__fs.gdn::list_directory.html  fun:__fs.gdn::set_working_directory.html  fun:__fs.gdn::working_directory.html  fun:__fs.gdn::write_file.html  fun:__garden.gdn::check_snippet.html  fun:__garden.gdn::doc_comment.html  fun:__garden.gdn::doc_comment_for_method.html  fun:__garden.gdn::doc_comment_for_type.html  fun:__garden.gdn::keywords.html  fun:__garden.gdn::lex.html  fun:__garden.gdn::methods_for_type.html  fun:__garden.gdn::namespace_functions.html  fun:__garden.gdn::prelude_types.html  fun:__garden.gdn::source_for_fun.html  fun:__garden.gdn::source_for_method.html  fun:__garden.gdn::source_for_type.html  fun:__prelude.gdn::dbg.html  fun:__prelude.gdn::error.html  fun:__prelude.gdn::get_env.html  fun:__prelude.gdn::max.html  fun:__prelude.gdn::min.html  fun:__prelude.gdn::print.html  fun:__prelude.gdn::println.html  fun:__prelude.gdn::range.html  fun:__prelude.gdn::shell.html  fun:__prelude.gdn::shell_arguments.html  fun:__prelude.gdn::source_directory.html  fun:__prelude.gdn::string_repr.html  fun:__prelude.gdn::throw.html  fun:__prelude.gdn::todo.html  fun:__random.gdn::int.html  fun:__reflect.gdn::check_snippet.html  fun:__reflect.gdn::doc_comment.html  (+163 more)
(+867 files in other folders)
