[workspace]
members = ["garden-lang-parser", "garden-lang-web"]

[workspace.package]
description = "A live programming language."
license = "MIT"
repository = "https://github.com/Wilfred/garden"
version = "0.18.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]

[package]
name = "garden-lang"
edition = "2021"
keywords = ["compilers", "development-tools"]
rust-version = "1.78.0"
license.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
include = [
        "/src/**/*.rs",
        "/src/prelude.gdn",
        "/src/builtins.gdn",
        "/LICENSE",
        "/README.md",
]

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
ctrlc = "3.2.5"
humantime = "2.1.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
line-numbers = "0.3.0"
ordered-float = "3.7.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
regex = "1.7.1"
rustyline = "10.1.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
strsim = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.1"
garden-lang-parser = { version = "0.18.0", path = "garden-lang-parser" }
rustc-hash = "2.1.0"

[[bin]]
name = "garden"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
goldentests = "1.1.1"

[profile.release]
opt-level = "s"
