[package]
name = "garden-lang"
description = "A live programming language."
license = "MIT"
repository = "https://github.com/Wilfred/garden"
version = "0.23.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
edition = "2021"
keywords = ["compilers", "development-tools"]
rust-version = "1.85.0"
include = [
        "/src/**/*.rs",
        "/src/*.gdn",
        "/LICENSE",
        "/README.md",
]

[dependencies]
clap = { version = "4.1.11", features = ["derive", "wrap_help"] }
ctrlc = "3.2.5"
humantime = "2.1.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
line-numbers = "0.4.0"
lsp-types = "0.97.0"
ordered-float = "3.7.0"
url = "2.5.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
rand = "0.9.1"
regex = "1.7.1"
rustyline = "17.0.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
serde_json = "1.0.48"
strsim = "0.10.0"
strum = "0.24.1"
strum_macros = "0.24.1"
rustc-hash = "2.1.0"
normalize-path = "0.2.1"

[[bin]]
name = "garden"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
escargot = "0.5"
goldentests = "1.1.1"
predicates = "3"

[profile.release]
opt-level = "s"
