[package]
name = "garden-lang-parser"
edition = "2021"
version = "0.19.0"
license.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
include = [
        "/src/",
        "../LICENSE",
        "../README.md",
]

[dependencies]
lazy_static = "1.4.0"
line-numbers = "0.4.0"
regex = "1.7.1"
serde = { version = "1.0.104", features = ["derive", "rc"] }
strum = "0.24.1"
strum_macros = "0.24.1"
rustc-hash = "2.1.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
