[package]
name = "garden-lang-web"
edition = "2021"
license.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
garden-lang-parser = { path = "../garden-lang-parser" }
