[package]
name = "garden_lang_parser"
edition = "2021"
license.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.4.0"
line-numbers = "0.2.2"
regex = "1.7.1"
serde = { version = "1.0.104", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.1"

