[package]
name = "garden_lang_web"
edition = "2021"
license.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.89"
garden_lang_parser = { path = "../garden_lang_parser" }
